--- a/index.html
+++ b/index.html
@@ -31,9 +31,13 @@
                 </div>
             </nav>
         </header>
-        <div id="contentPage">
-
-        </div>
+        <section id="Accueil">
+            <div id="contentPage">
+        <h1 class="m-auto text-center">Bienvenue chez Gold'Toc</h1>
+        <h2 class="m-auto text-center">Tu veux paraître riche, mais tu n'as pas de thunes ?! Gold'Toc est fait pour toi !</h2>
+        <img src="../page d'accueil gol toc/assets/img/accueil.png" class="col-xs-12 col-sm-12 col-md-12 col-xl-12" alt=""/>
+            </section>
+            </div>
         <footer id="bottomMenu">
             <figure class="networkButton float-left d-flex align-items-center justify-content-center">
                 <img src="assets/img/iconeTweeter.png">
