--- a/index.html
+++ b/index.html
@@ -36,12 +36,15 @@
         </div>
         <footer id="bottomMenu">
             <figure class="networkButton float-left d-flex align-items-center justify-content-center">
+                <source srcset="assets/img/min/iconGmail.png" media="(max-width:991px)">
                 <img src="assets/img/iconeTweeter.png">
             </figure>
             <figure class="networkButton float-left d-flex align-items-center justify-content-center">
+                <source srcset="assets/img/min/iconGmail.png" media="(max-width:991px)">
                 <img src="assets/img/iconeInstagram.png">
             </figure>
             <figure class="networkButton float-left d-flex align-items-center justify-content-center">
+                <source srcset="assets/img/min/iconGmail.png" media="(max-width:991px)">
                 <img src="assets/img/iconFacebook.png">
             </figure>
         </footer>
