--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
                 <div class="collapse navbar-collapse order-3 order-lg-0" id="menuContent">
                     <ul id="menuList" class="navbar-nav">
                         <li class="nav-item thema">
-                            <div id="goldThema" class="nav-item float-left d-flex align-items-center"><a class="text-center w-100" href="#">L'or</a></div>
-                            <div id="bucksThema" class="nav-item float-left d-flex align-items-center"><a class="text-center w-100" href="#">Les billets</a></div>
+                            <div id="goldThema" class="nav-item float-left d-flex align-items-center"><a class="text-center text-dark font-weight-bold w-100" href="#">L'or</a></div>
+                            <div id="bucksThema" class="nav-item float-left d-flex align-items-center"><a class="text-center text-dark font-weight-bold w-100" href="#">Les billets</a></div>
                         </li>
-                        <li class="nav-item d-flex align-items-center categorie"><a class="text-white text-center w-100" href="#">Objet du quotidien</a></li>
-                        <li class="nav-item d-flex align-items-center categorie"><a class="text-white text-center w-100" href="#">accessoires</a></li>
-                        <li class="nav-item d-flex align-items-center categorie"><a class="text-white text-center w-100" href="#">costumes</a></li>
-                        <li class="nav-item d-flex align-items-center categorie"><a class="text-white text-center w-100" href="#">décorations</a></li>
+                        <li class="nav-item d-flex align-items-center categorie"><a class="text-white text-center w-100" href="#">Objets du quotidien</a></li>
+                        <li class="nav-item d-flex align-items-center categorie"><a class="text-white text-center w-100" href="#">Accessoires</a></li>
+                        <li class="nav-item d-flex align-items-center categorie"><a class="text-white text-center w-100" href="#">Costumes</a></li>
+                        <li class="nav-item d-flex align-items-center categorie"><a class="text-white text-center w-100" href="#">Décorations</a></li>
                     </ul>
                 </div>
                 <h1 class="float-left text-center">Gold'Toc</h1>
@@ -31,13 +31,13 @@
                 </div>
             </nav>
         </header>
-        <section id="Accueil">
-            <div id="contentPage">
-        <h1 class="m-auto text-center">Bienvenue chez Gold'Toc</h1>
-        <h2 class="m-auto text-center">Tu veux paraître riche, mais tu n'as pas de thunes ?! Gold'Toc est fait pour toi !</h2>
-        <img src="../page d'accueil gol toc/assets/img/accueil.png" class="col-xs-12 col-sm-12 col-md-12 col-xl-12" alt=""/>
+        <div id="contentPage">
+            <section id="Accueil">
+                <h2 class="m-auto text-center">Bienvenue chez Gold'Toc</h2>
+                <h3 class="m-auto text-center">Tu veux paraître riche, mais tu n'as pas de thunes ?! Gold'Toc est fait pour toi !</h3>
+                <img src="assets/img/accueil.png" class="offset-1 col-10" alt=""/>
             </section>
-            </div>
+        </div>
         <footer id="bottomMenu">
             <figure class="networkButton float-left d-flex align-items-center justify-content-center">
                 <source srcset="assets/img/min/iconGmail.png" media="(max-width:991px)">
