--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
         </header>
         <div id="contentPage">
             <section id="Accueil">
-                <h2 class="m-auto text-center">Bienvenue chez Gold'Toc</h2>
-                <h3 class="m-auto text-center">Tu veux paraître riche, mais tu n'as pas de thunes ?! Gold'Toc est fait pour toi !</h3>
+                <h2 class="pt-2 text-center">Bienvenue chez Gold'Toc</h2>
+                <h3 class="my-3 text-center">Tu veux paraître riche, mais tu n'as pas de thunes ?! Gold'Toc est fait pour toi !</h3>
                 <img src="assets/img/accueil.png" class="offset-1 col-10" alt=""/>
             </section>
         </div>
