partie JESS img modif

--- a/index.html
+++ b/index.html
@@ -306,54 +306,54 @@
         </section>
         <!--Présentation liste-->
         <section id="presentationTextList">
-            <p id="BCfemmeVert"></p>
-            <p id="BAboucle"></p>
-            <p id="BAcasquette"></p>
-            <p id="BAlot"></p>
-            <p id="BAparapluie"></p>
-            <p id="BCbebe"></p>
-            <p id="BCenfant"></p>
-            <p id="BAfemmeSexy"></p>
-            <p id="BChommeBeige"></p>
-            <p id="BAhommeVert"></p>
-            <p id="BDliterie"></p>
-            <p id="BDnappe"></p>
-            <p id="BDpapierPeint"></p>
-            <p id="BDsol"></p>
-            <p id="BObriquet"></p>
-            <p id="BOmouchoir"></p>
-            <p id="GApistolet"></p>
-            <p id="GCenfant"></p>
-            <p id="GCfemmeCombi"></p>
-            <p id="GChommeNoir"></p>
-            <p id="GChommeRouge"></p>
-            <p id="GCrobe"></p>
-            <p id="GCrobe2"></p>
-            <p id="GDananas"></p>
-            <p id="GDcanape"></p>
-            <p id="GDcerise"></p>
-            <p id="GDelephant"></p>
-            <p id="GDmain"></p>
-            <p id="GDverre"></p>
-            <p id="GObriquet"></p>
-            <p id="GOclavier"></p>
-            <p id="GOsouris"></p>
-            <p id="GOtubeuse"></p>
-            <p id="BAcoque"></p>
-            <p id="BAtirelire"></p>
-            <p id="BDsocle"></p>
-            <p id="BDtableau"></p>
-            <p id="BOpapierToilette"></p>
-            <p id="BOpince"></p>
-            <p id="BOtasse"></p>
-            <p id="BOusb"></p>
-            <p id="GAbagues"></p>
-            <p id="GAcacheTetons"></p>
-            <p id="GAchaine"></p>
-            <p id="GAdents"></p>
-            <p id="GAtetine"></p>
-            <p id="GOpapierToilette"></p>
-            <p id="GOusb"></p>
+            <p id="BCfemmeVert.gif"></p>
+            <p id="BAboucle.jpg"></p>
+            <p id="BAcasquette.jpg"></p>
+            <p id="BAlot.jpg"></p>
+            <p id="BAparapluie.jpg"></p>
+            <p id="BCbebe.jpg"></p>
+            <p id="BCenfant.jpg"></p>
+            <p id="BAfemmeSexy.jpg"></p>
+            <p id="BChommeBeige.jpg"></p>
+            <p id="BAhommeVert.jpg"></p>
+            <p id="BDliterie.jpg"></p>
+            <p id="BDnappe.jpg"></p>
+            <p id="BDpapierPeint.jpeg"></p>
+            <p id="BDsol.jpg"></p>
+            <p id="BObriquet.jpg"></p>
+            <p id="BOmouchoir.jpg"></p>
+            <p id="GApistolet.jpg"></p>
+            <p id="GCenfant.jpg"></p>
+            <p id="GCfemmeCombi.jpg"></p>
+            <p id="GChommeNoir.jpeg"></p>
+            <p id="GChommeRouge.jpg"></p>
+            <p id="GCrobe.jpg"></p>
+            <p id="GCrobe2.jpg"></p>
+            <p id="GDananas.jpg"></p>
+            <p id="GDcanape.jpg"></p>
+            <p id="GDcerise.jpg"></p>
+            <p id="GDelephant.jpg"></p>
+            <p id="GDmain.jpg"></p>
+            <p id="GDverre.jpeg"></p>
+            <p id="GObriquet.jpg"></p>
+            <p id="GOclavier.jpg"></p>
+            <p id="GOsouris.jpg"></p>
+            <p id="GOtubeuse.jpg"></p>
+            <p id="BAcoque.png"></p>
+            <p id="BAtirelire.png"></p>
+            <p id="BDsocle.png"></p>
+            <p id="BDtableau.png"></p>
+            <p id="BOpapierToilette.png"></p>
+            <p id="BOpince.png"></p>
+            <p id="BOtasse.png"></p>
+            <p id="BOusb.png"></p>
+            <p id="GAbagues.png"></p>
+            <p id="GAcacheTetons.png"></p>
+            <p id="GAchaine.png"></p>
+            <p id="GAdents.png"></p>
+            <p id="GAtetine.png"></p>
+            <p id="GOpapierToilette.png"></p>
+            <p id="GOjusb.png"></p>
         </section>
         <!--Fin présentation liste-->
     </div>
