--- a/index.html
+++ b/index.html
@@ -306,10 +306,10 @@
         </section>
         <!--Présentation liste-->
         <section id="presentationTextList">
-            <p id="BCfemmeVert"></p>
-            <p id="BAboucle"></p>
-            <p id="BAcasquette"></p>
-            <p id="BAlot"></p>
+            <p id="BAboucle.jpg"></p>
+            <p id="BAcasquette.jpg"></p>
+            <p id="BAcoque.png"></p>
+            <p id="BAlot.jpg"></p>
             <p id="BAparapluie"></p>
             <p id="BCbebe"></p>
             <p id="BCenfant"></p>
