--- a/index.html
+++ b/index.html
@@ -306,23 +306,23 @@
         </section>
         <!--Présentation liste-->
         <section id="presentationTextList">
-            <p id="BCfemmeVert.gif"></p>
-            <p id="BAboucle.jpg"></p>
-            <p id="BAcasquette.jpg"></p>
-            <p id="BAlot.jpg"></p>
-            <p id="BAparapluie.jpg"></p>
+            <p id="BCfemmeVert.gif">Très jolie robe de lapine or et billets de banque qui vous promet une soirée aux pays des merveilles !</p>
+            <p id="BAboucle.jpg">Boucle de ceinture qui nécessite une ceinture avec fixation rapide. Toutes nos boucles acceptent des ceintures jusqu'à 4cm de large. LA boucle qui se l'a pète !.</p>
+            <p id="BAcasquette.jpg">Holla pour un dinar ! Casquette comportant le dinar irakien avec Saddam Hussein.</p>
+            <p id="BAlot.jpg">Idéal pour apprendre à compter. Apprenez à vos enfants la valeur de l’argent, en espérant que EUX ne deviennent pas des faux riches !</p>
+            <p id="BAparapluie.jpg">Si vous rêvez d'argent qui tombe du ciel, voici un parapluie billets de 100 dollars, qui, tout en vous protégeant des gouttes, vous assurera de ne pas passer inaperçu !</p>
             <p id="BCbebe.jpg"></p>
             <p id="BCenfant.jpg"></p>
-            <p id="BAfemmeSexy.jpg"></p>
-            <p id="BChommeBeige.jpg"></p>
-            <p id="BAhommeVert.jpg"></p>
+            <p id="BCfemmeSexy.jpg"></p>
+            <p id="BChommeBeige.jpg">Costume pour homme billets de banque. De quoi enrichir vos soirées coktails !</p>
+            <p id="BChommeVert.jpg"></p>
             <p id="BDliterie.jpg"></p>
             <p id="BDnappe.jpg"></p>
             <p id="BDpapierPeint.jpeg"></p>
             <p id="BDsol.jpg"></p>
             <p id="BObriquet.jpg"></p>
             <p id="BOmouchoir.jpg"></p>
-            <p id="GApistolet.jpg"></p>
+            <p id="GApistolet.jpg">Le tire-monnaie ! Accesoire INDISPENSABLE pour les faux riches, il vous permettra de jouir de votre fausse richesse !</p>
             <p id="GCenfant.jpg"></p>
             <p id="GCfemmeCombi.jpg"></p>
             <p id="GChommeNoir.jpeg"></p>
@@ -347,11 +347,11 @@
             <p id="BOpince.png"></p>
             <p id="BOtasse.png"></p>
             <p id="BOusb.png"></p>
-            <p id="GAbagues.png"></p>
-            <p id="GAcacheTetons.png"></p>
-            <p id="GAchaine.png"></p>
-            <p id="GAdents.png"></p>
-            <p id="GAtetine.png"></p>
+            <p id="GAbagues.png">Bagues en or qui... bah c’est des bagues quoi...</p>
+            <p id="GAcacheTetons.png">Voici notre produit phare ! Notre produit le plus demandé, le cache-tétons en OR ! De par son design ACCROCHEUR et sa douceur incomparable, ce cache-tétons vous permettra de vous balader en été en toute liberté. Vous pouvez le porter seul ou par dessus vos vêtements ! La satisfaction est GA-RAN-TI (satisfait ou satisfait on rend pas l’argent ici).</p>
+            <p id="GAchaine.png">Vous aimez l’or et le Front National ? Ca n’a aucun rapport mais voici une chaîne en Or.</p>
+            <p id="GAdents.png">Dentior, le dentier qui vous rendra bling bling.</p>
+            <p id="GAtetine.png">Cette tutute en or permettra à votre enfant de devenir rappeur plus vite.</p>
             <p id="GOpapierToilette.png"></p>
             <p id="GOjusb.png"></p>
         </section>
