--- a/index.html
+++ b/index.html
@@ -388,7 +388,7 @@
             <p id="GAdents.png">Dentior, le dentier qui vous rendra bling bling.</p>
             <p id="GAtetine.png">Cette tutute en or permettra à votre enfant de devenir rappeur plus vite.</p>
             <p id="GOpapierToilette.png">Papier toilette en or, fesses d'or, selles dorées !</p>
-            <p id="GOjusb.png">Plus léger qu'un lingot d'or, emportez vos fichiers dorés partout avec vous !</p>
+            <p id="GOusb.png">Plus léger qu'un lingot d'or, emportez vos fichiers dorés partout avec vous !</p>
         </section>
         <!--Fin présentation liste-->
     </div>
