--- a/index.html
+++ b/index.html
@@ -392,7 +392,7 @@
         </section>
         <!--Fin présentation liste-->
     </div>
-    <footer id="bottomMenu">
+    <footer class="d-flex justify-content-center justify-content-lg-start" id="bottomMenu">
         <figure class="networkButton float-left d-flex align-items-center justify-content-center">
             <source srcset="assets/img/min/iconGmail.png" media="(max-width:991px)">
             <img src="assets/img/iconeTweeter.png">
