--- a/index.html
+++ b/index.html
@@ -86,27 +86,27 @@
                 <div class="row">
                     <div class="col-lg-4">
                         <img src="assets/img/products/GObriquet.jpg" onclick="showPresentation(5.90, 'GObriquet.jpg', alt)" alt="Briquet en or" style="width: 100%; height: 84%;">
-                        <p>Prix : 5€90</p>
+                        <p>Prix : 5.90 euros</p>
                     </div>
                     <div class="col-lg-4">
                         <img src="assets/img/products/GOclavier.jpg" onclick="showPresentation(7.50, 'GOclavier.jpg', alt)" alt="Clavier en or" style="width: 100%; height: 84%;">
-                        <p>Prix : 7€50</p>
+                        <p>Prix : 7.50 euros</p>
                     </div>
                     <div class="col-lg-4">
                         <img src="assets/img/products/GOusb.png" onclick="showPresentation(1.90, 'GOusb.png', alt)" alt="Clé USB en or" style="width: 100%; height: 84%;">
-                        <p>Prix : 1€90</p>
+                        <p>Prix : 1.90 euro</p>
                     </div>
                     <div class="col-lg-4">
                         <img src="assets/img/products/GOpapierToilette.png" onclick="showPresentation(1.50, 'GOpapierToilette.png', alt)" alt="Papier toillette en or" style="width: 100%; height: 84%;">
-                        <p>Prix : 1€50</p>
+                        <p>Prix : 1.50 euro</p>
                     </div>
                     <div class="col-lg-4">
                         <img src="assets/img/products/GOsouris.jpg" onclick="showPresentation(5, 'GOsouris.jpg', alt)" alt="Souris en or" style="width: 100%; height: 84%;">
-                        <p>Prix : 5€</p>
+                        <p>Prix : 5 euros</p>
                     </div>
                     <div class="col-lg-4">
                         <img src="assets/img/products/GOtubeuse.jpg" onclick="showPresentation(2.90, 'GOtubeuse.jpg', alt)" alt="Tubeuse en or" style="width: 100%; height: 84%;">
-                        <p>Prix : 2€90</p>
+                        <p>Prix : 2.90 euros</p>
                     </div>
                 </div>
             </div>
@@ -115,27 +115,27 @@
                 <div class="row">
                     <div class="col-lg-4">
                         <img src="assets/img/products/BObriquet.jpg" onclick="showPresentation(3.99, 'BObriquet.jpg', alt)" alt="Briquet en billet" style="width: 100%; height: 84%;">
-                        <p>Prix : 3€99</p>
+                        <p>Prix : 3.99 euros</p>
                     </div>
                     <div class="col-lg-4">
                         <img src="assets/img/products/BOusb.png" onclick="showPresentation(0.99, 'BOusb.png', alt)" alt="Clé USB en billet" style="width: 100%; height: 84%;">
-                        <p>Prix : 0€99</p>
+                        <p>Prix : 0.99 euro</p>
                     </div>
                     <div class="col-lg-4">
                         <img src="assets/img/products/BOpapierToilette.png" onclick="showPresentation(1.20, 'BOpapierToilette.png', alt)" alt="Papier toillette en billet" style="width: 100%; height: 84%;">
-                        <p>Prix : 1€20</p>
+                        <p>Prix : 1.20 euro</p>
                     </div>
                     <div class="col-lg-4">
                         <img src="assets/img/products/BOpince.png" onclick="showPresentation(0.50, 'BOpince.png', alt)" alt="Pince à billet" style="width: 100%; height: 84%;">
-                        <p>Prix : 0€50</p>
+                        <p>Prix : 0.50 euro</p>
                     </div>
                     <div class="col-lg-4">
                         <img src="assets/img/products/BOtasse.png" onclick="showPresentation(1.10, 'BOtasse.png', alt)" alt="Tasse billet" style="width: 100%; height: 84%;">
-                        <p>Prix : 1€10</p>
+                        <p>Prix : 1.10 euro</p>
                     </div>
                     <div class="col-lg-4">
                         <img src="assets/img/products/BOmouchoir.jpg" onclick="showPresentation(1, 'BOmouchoir.jpg', alt)" alt="Mouchoirs billet" style="width: 100%; height: 84%;">
-                        <p>Prix : 1€</p>
+                        <p>Prix : 1 euro</p>
                     </div>
                 </div>
             </div>
@@ -144,27 +144,27 @@
                 <div class="row">
                     <div class="col-lg-4">
                         <img src="assets/img/products/GAbagues.png" onclick="showPresentation(2, 'GAbagues.png', alt)" alt="Bagues en or" style="width: 100%; height: 84%;">
-                        <p>Prix : 2€</p>
+                        <p>Prix : 2 euros</p>
                     </div>
                     <div class="col-lg-4">
                         <img src="assets/img/products/GAcacheTetons.png" onclick="showPresentation(2.50, 'GAcacheTetons.png', alt)" alt="Cache tétons or" style="width: 100%; height: 84%;">
-                        <p>Prix : 2€50</p>
+                        <p>Prix : 2.50 euros</p>
                     </div>
                     <div class="col-lg-4">
                         <img src="assets/img/products/GAchaine.png" onclick="showPresentation(3, 'GAchaine.png', alt)" alt="Chaîne en or" style="width: 100%; height: 84%;">
-                        <p>Prix : 3€</p>
+                        <p>Prix : 3 euros</p>
                     </div>
                     <div class="col-lg-4">
                         <img src="assets/img/products/GAdents.png" onclick="showPresentation(4.50, 'GAdents.png', alt)" alt="Dents en or" style="width: 100%; height: 84%;">
-                        <p>Prix : 4€50</p>
+                        <p>Prix : 4.50 euros</p>
                     </div>
                     <div class="col-lg-4">
                         <img src="assets/img/products/GApistolet.jpg" onclick="showPresentation(5.99, 'GApistolet.jpg', alt)" alt="Pistolet à billet" style="width: 100%; height: 84%;">
-                        <p>Prix : 5€99</p>
+                        <p>Prix : 5.99 euros</p>
                     </div>
                     <div class="col-lg-4">
                         <img src="assets/img/products/GAtetine.png" onclick="showPresentation(2.15, 'GAtetine.png', alt)" alt="Tétine en or" style="width: 100%; height: 84%;">
-                        <p>Prix : 2€15</p>
+                        <p>Prix : 2.15 euros</p>
                     </div>
                 </div>
             </div>
@@ -173,27 +173,27 @@
                 <div class="row">
                     <div class="col-lg-4">
                         <img src="assets/img/products/BAlot.jpg" onclick="showPresentation(1.99, 'BAlot.jpg', alt)" alt="Lot de pièces et de billets" style="width: 100%; height: 84%;">
-                        <p>Prix : 1€99</p>
+                        <p>Prix : 1.99 euro</p>
                     </div>
                     <div class="col-lg-4">
                         <img src="assets/img/products/BAboucle.jpg" onclick="showPresentation(6.50, 'BAboucle.jpg', alt)" alt="Boucle ceinture billet" style="width: 100%; height: 84%;">
-                        <p>Prix : 6€50</p>
+                        <p>Prix : 6.50 euros</p>
                     </div>
                     <div class="col-lg-4">
                         <img src="assets/img/products/BAtirelire.png" onclick="showPresentation(1, 'BAtirelire.png', alt)" alt="Tirelire billet" style="width: 100%; height: 84%;">
-                        <p>Prix : 1€</p>
+                        <p>Prix : 1 euro</p>
                     </div>
                     <div class="col-lg-4">
                         <img src="assets/img/products/BAcasquette.jpg" onclick="showPresentation(4, 'BAcasquette.jpg', alt)" alt="Casquette billet" style="width: 100%; height: 84%;">
-                        <p>Prix : 4€</p>
+                        <p>Prix : 4 euros</p>
                     </div>
                     <div class="col-lg-4">
                         <img src="assets/img/products/BAcoque.png" onclick="showPresentation(2.50, 'BAcoque.png', alt)" alt="Coque téléphone billet" style="width: 100%; height: 84%;">
-                        <p>Prix : 2€50</p>
+                        <p>Prix : 2.50 euros</p>
                     </div>
                     <div class="col-lg-4">
                         <img src="assets/img/products/BAparapluie.jpg" onclick="showPresentation(5, 'BAparapluie.jpg', alt)" alt="Parapluie billet" style="width: 100%; height: 84%;">
-                        <p>Prix : 5€</p>
+                        <p>Prix : 5 euros</p>
                     </div>
                 </div>
             </div>
@@ -202,27 +202,27 @@
                 <div class="row">
                     <div class="col-lg-4">
                         <img src="assets/img/products/GChommeNoir.jpeg" onclick="showPresentation(12.50, 'GChommeNoir.jpeg', alt)" alt="Costume en or" style="width: 100%; height: 84%;">
-                        <p>Prix : 12€50</p>
+                        <p>Prix : 12.50 euros</p>
                     </div>
                     <div class="col-lg-4">
                         <img src="assets/img/products/GChommeRouge.jpg" onclick="showPresentation(9.99, 'GChommeRouge.jpg', alt)" alt="Emir quataris" style="width: 100%; height: 84%;">
-                        <p>Prix : 9€99</p>
+                        <p>Prix : 9.99 euros</p>
                     </div>
                     <div class="col-lg-4">
                         <img src="assets/img/products/GCenfant.jpg" onclick="showPresentation(8, 'GCenfant.jpg', alt)" alt="Costume en or enfant" style="width: 100%; height: 84%;">
-                        <p>Prix : 8€</p>
+                        <p>Prix : 8 euros</p>
                     </div>
                     <div class="col-lg-4">
                         <img src="assets/img/products/GCrobe.jpg" onclick="showPresentation(10, 'GCrobe.jpg', alt)" alt="Robe de soirée or" style="width: 100%; height: 84%;">
-                        <p>Prix : 10€</p>
+                        <p>Prix : 10 euros</p>
                     </div>
                     <div class="col-lg-4">
                         <img src="assets/img/products/GCrobe2.jpg" onclick="showPresentation(10, 'GCrobe2.jpg', alt)" alt="Robe soirée or" style="width: 100%; height: 84%;">
-                        <p>Prix : 10€</p>
+                        <p>Prix : 10 euros</p>
                     </div>
                     <div class="col-lg-4">
                         <img src="assets/img/products/GCfemmeCombi.jpg" onclick="showPresentation(11.50, 'GCfemmeCombi.jpg', alt)" alt="Juste au corps or" style="width: 100%; height: 84%;">
-                        <p>Prix : 11€50</p>
+                        <p>Prix : 11.50 euros</p>
                     </div>
                 </div>
             </div>
@@ -231,27 +231,27 @@
                 <div class="row">
                     <div class="col-lg-4">
                         <img src="assets/img/products/BChommeVert.jpg" onclick="showPresentation(10.50, 'BChommeVert.jpg', alt)" alt="Veste dollars" style="width: 100%; height: 84%;">
-                        <p>Prix : 10€50</p>
+                        <p>Prix : 10.50 euros</p>
                     </div>
                     <div class="col-lg-4">
                         <img src="assets/img/products/BChommeBeige.jpg" onclick="showPresentation(10.50, 'BChommeBeige.jpg', alt)" alt="Costume homme dollars" style="width: 100%; height: 84%;">
-                        <p>Prix : 10€50</p>
+                        <p>Prix : 10.50 euros</p>
                     </div>
                     <div class="col-lg-4">
                         <img src="assets/img/products/BCfemmeSexy.jpg" onclick="showPresentation(8.99, 'BCfemmeSexy.jpg', alt)" alt="Costume femme dollars" style="width: 100%; height: 84%;">
-                        <p>Prix : 8€99</p>
+                        <p>Prix : 8.99 euors</p>
                     </div>
                     <div class="col-lg-4">
                         <img src="assets/img/products/BCenfant.jpg" onclick="showPresentation(7.90, 'BCenfant.jpg', alt)" alt="Dollar enfant" style="width: 100%; height: 84%;">
-                        <p>Prix : 7€90</p>
+                        <p>Prix : 7.90 euros</p>
                     </div>
                     <div class="col-lg-4">
                         <img src="assets/img/products/BCbebe.jpg" onclick="showPresentation(6.50, 'BCbebe.jpg', alt)" alt="Gigoteuse bébé dollar" style="width: 100%; height: 84%;">
-                        <p>Prix : 6€50</p>
+                        <p>Prix : 6.50 euros</p>
                     </div>
                     <div class="col-lg-4">
                         <img src="assets/img/products/BCfemmeVert.gif" onclick="showPresentation(9.99, 'BCfemmeVert.gif', alt)" alt="Robe femme dollars" style="width: 100%; height: 84%;">
-                        <p>Prix : 9€99</p>
+                        <p>Prix : 9.99 euros</p>
                     </div>
                 </div>
             </div>
@@ -260,27 +260,27 @@
                 <div class="row">
                     <div class="col-lg-4">
                         <img src="assets/img/products/GDelephant.jpg" onclick="showPresentation(5.90, 'GDelephant.jpg', alt)" alt="Statue éléphant or" style="width: 100%; height: 84%;">
-                        <p>Prix : 5€90</p>
+                        <p>Prix : 5.90 euros</p>
                     </div>
                     <div class="col-lg-4">
                         <img src="assets/img/products/GDcanape.jpg" onclick="showPresentation(54.99, 'GDcanape.jpg', alt)" alt="Canapé or" style="width: 100%; height: 84%;">
-                        <p>Prix : 54€99</p>
+                        <p>Prix : 54.99 euros</p>
                     </div>
                     <div class="col-lg-4">
                         <img src="assets/img/products/GDverre.jpeg" onclick="showPresentation(2.20, 'GDverre.jpeg', alt)" alt="Verre coca or" style="width: 100%; height: 84%;">
-                        <p>Prix : 2€20</p>
+                        <p>Prix : 2.20 euros</p>
                     </div>
                     <div class="col-lg-4">
                         <img src="assets/img/products/GDcerise.jpg" onclick="showPresentation(3.15, 'GDcerise.jpg', alt)" alt="Cerise or" style="width: 100%; height: 84%;">
-                        <p>Prix : 3€15</p>
+                        <p>Prix : 3.15 euros</p>
                     </div>
                     <div class="col-lg-4">
                         <img src="assets/img/products/GDananas.jpg" onclick="showPresentation(7.90, 'GDananas.jpg', alt)" alt="Ananas or" style="width: 100%; height: 84%;">
-                        <p>Prix : 7€90</p>
+                        <p>Prix : 7.90 euros</p>
                     </div>
                     <div class="col-lg-4">
                         <img src="assets/img/products/GDmain.jpg" onclick="showPresentation(2.50, 'GDmain.jpg', alt)" alt="Main dorée" style="width: 100%; height: 84%;">
-                        <p>Prix : 2€50</p>
+                        <p>Prix : 2.50 euros</p>
                     </div>
                 </div>
             </div>
@@ -289,27 +289,27 @@
                 <div class="row">
                     <div class="col-lg-4">
                         <img src="assets/img/products/BDliterie.jpg" onclick="showPresentation(14.90, 'BDliterie.jpg', alt)" alt="Literie dollars" style="width: 100%; height: 84%;">
-                        <p>Prix : 14€90</p>
+                        <p>Prix : 14.90 euros</p>
                     </div>
                     <div class="col-lg-4">
                         <img src="assets/img/products/BDnappe.jpg" onclick="showPresentation(2.99, 'BDnappe.jpg', alt)" alt="Nappe billets" style="width: 100%; height: 84%;">
-                        <p>Prix : 2€99</p>
+                        <p>Prix : 2.99 euros</p>
                     </div>
                     <div class="col-lg-4">
                         <img src="assets/img/products/BDpapierPeint.jpeg" onclick="showPresentation(11.50, 'BDpapierPeint.jpeg', alt)" alt="Papier peint billets" style="width: 100%; height: 84%;">
-                        <p>Prix : 11€50</p>
+                        <p>Prix : 11.50 euros</p>
                     </div>
                     <div class="col-lg-4">
                         <img src="assets/img/products/BDsol.jpg" onclick="showPresentation(10, 'BDsol.jpg', alt)" alt="Sol dollars" style="width: 100%; height: 84%;">
-                        <p>Prix : 10€</p>
+                        <p>Prix : 10 euros</p>
                     </div>
                     <div class="col-lg-4">
                         <img src="assets/img/products/BDtableau.png" onclick="showPresentation(8.50, 'BDtableau.png', alt)" alt="Tableau billets" style="width: 100%; height: 84%;">
-                        <p>Prix : 8€50</p>
+                        <p>Prix : 8.50 euros</p>
                     </div>
                     <div class="col-lg-4">
                         <img src="assets/img/products/BDsocle.png" onclick="showPresentation(6, 'BDsocle.png', alt)" alt="Socle billet de banque" style="width: 100%; height: 84%;">
-                        <p>Prix : 6€</p>
+                        <p>Prix : 6 euros</p>
                     </div>
                 </div>
             </div>
@@ -394,16 +394,16 @@
             <p id="GAdents.png">Dentior, le dentier qui vous rendra bling bling.</p>
             <p id="GAtetine.png">Cette tutute en or permettra à votre enfant de devenir rappeur plus vite.</p>
             <p id="GOpapierToilette.png">Papier toilette en or, fesses d'or, selles dorées !</p>
-            <p id="GOjusb.png">Plus léger qu'un lingot d'or, emportez vos fichiers dorés partout avec vous !</p>
+            <p id="GOusb.png">Plus léger qu'un lingot d'or, emportez vos fichiers dorés partout avec vous !</p>
         </section>
         <!--Fin présentation liste-->
     </div>
     <footer id="bottomMenu">
-        <figure class="networkButton float-left d-flex align-items-center justify-content-center">
+        <figure class="networkButton float-left d-flex align-items-center justify-content-center mx-3">
             <source srcset="assets/img/min/iconGmail.png" media="(max-width:991px)">
             <img src="assets/img/iconeTweeter.png">
         </figure>
-        <figure class="networkButton float-left d-flex align-items-center justify-content-center">
+        <figure class="networkButton float-left d-flex align-items-center justify-content-center mr-3">
             <source srcset="assets/img/min/iconGmail.png" media="(max-width:991px)">
             <img src="assets/img/iconeInstagram.png">
         </figure>
